# datetimegroup

./: CMakeLists.txt  README  datetimegroup.cpp  datetimegroup.h  dtgConfig.ui  dtgtzwidget.cpp  dtgtzwidget.h  install.sh  plasma-applet-datetimegroup.desktop  timezonesConfig.ui
dateTimeGroupEngine/: CMakeLists.txt  datetimegrouplib.cpp  datetimegrouplib.h  plasma-engine-datetimegroup.desktop
